CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(PROJECT_NAME Werewolves_vs_Vampires)

PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_STANDARD 11)
SET(
	SOURCES 
		main.cpp
		src/window.cpp
		src/exceptions.cpp
		src/scene.cpp
		src/viewport.cpp
		src/events/event_handler.cpp
		src/nodes/node.cpp
		src/nodes/piece.cpp
		src/physics/geometry.cpp
		src/graphics/sprite.cpp
		src/graphics/graphic.cpp
)
SET(INSTALL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(RESOURCES_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/resources")

CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cmake_params.hpp.in"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cmake_params.hpp"
	NEWLINE_STYLE "UNIX")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
IF (WIN32)
	INCLUDE_DIRECTORIES("C:/SDL2/include" "C:/SDL2-Image/include" "C:/SDL2_ttf/include")
	FIND_LIBRARY(SDL2_LIBRARY SDL2 PATHS "${CMAKE_CURRENT_SOURCE_DIR}/libSDL2")
	FIND_LIBRARY(SDL2_MAIN_LIBRARY SDL2main PATHS "${CMAKE_CURRENT_SOURCE_DIR}/libSDL2")
	FIND_LIBRARY(SDL2_IMAGE_LIBRARY SDL2_image PATHS "${CMAKE_CURRENT_SOURCE_DIR}/libSDL2")
	FIND_LIBRARY(SDL2_TTF_LIBRARY SDL2_ttf PATHS "${CMAKE_CURRENT_SOURCE_DIR}/libSDL2")
	SET(DLL_INSTALLED_LIBS 
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/SDL2.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/SDL2_image.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/SDL2_ttf.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/libjpeg-9.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/libpng16-16.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/libtiff-5.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/libfreetype-6.dll"
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2/zlib1.dll"
	)

ELSE (WIN32)
	SET(DLL_INSTALLED_LIBS "")
	INCLUDE_DIRECTORIES("/usr/include" "/usr/local/include" "/usr/include/SDL2" "/usr/local/include/SDL2")
	FIND_LIBRARY(SDL2_LIBRARY SDL2 PATHS "/lib" "/usr/lib" "/usr/local/lib")
	FIND_LIBRARY(SDL2_MAIN_LIBRARY SDL2main PATHS "/lib" "/usr/lib" "/usr/local/lib")
	FIND_LIBRARY(SDL2_IMAGE_LIBRARY SDL2_image PATHS "/lib" "/usr/lib" "/usr/local/lib")

ENDIF(WIN32)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_MAIN_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_IMAGE_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_TTF_LIBRARY})

IF (WIN32)
	ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy_directory
		"${CMAKE_CURRENT_SOURCE_DIR}/libSDL2"
		$<TARGET_FILE_DIR:${PROJECT_NAME}>)
ENDIF(WIN32)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
INSTALL(FILES ${DLL_INSTALLED_LIBS} DESTINATION ${INSTALL_DIR})
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION ${INSTALL_DIR})
