CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(PROJECT_NAME Werewolves_vs_Vampires)

PROJECT(${PROJECT_NAME})

IF (NOT ARCH)
	SET(ARCH "x64")
ENDIF(NOT ARCH)

IF (NOT DEBUG_OR_RELEASE)
	SET(DEBUG_OR_RELEASE "Debug")
ENDIF(NOT DEBUG_OR_RELEASE)
SET(CMAKE_CXX_STANDARD 11)
SET(
	SOURCES 
		main.cpp
		#src/nodes/board.cpp
		src/nodes/piece.cpp
)
SET(INSTALL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin")
SET(RESOURCES_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/resources")

CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cmake_params.hpp.in"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cmake_params.hpp"
	NEWLINE_STYLE "UNIX")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
IF (WIN32)
	INCLUDE_DIRECTORIES("C:/devel/include")
	
	SET(SYSTEM_LIB_PATHS "C:/devel/lib/x64" "C:/devel/lib/Debug/x64")

	FIND_FILE(SDL2_DLL "SDL2.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(SDL2_IMAGE_DLL "SDL2_image.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(SDL2_TTF_DLL "SDL2_ttf.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(LIBJPEG9_DLL "libjpeg-9.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(LIBPNG16_DLL "libpng16-16.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(LIBTIFF_5_DLL "libtiff-5.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(LIBFREETYPE_DLL "libfreetype-6.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(ZLIB1_DLL "zlib1.dll" PATHS ${SYSTEM_LIB_PATHS})
	FIND_FILE(FENIXENGINE_DLL "FenixEngine.dll" PATHS ${SYSTEM_LIB_PATHS})

	SET(DLL_INSTALLED_LIBS 
		"${SDL2_DLL}
		${SDL2_IMAGE_DLL}
		${SDL2_TTF_DLL}
		${LIBJPEG9_DLL}
		${LIBPNG16_DLL}
		${LIBTIFF_5_DLL}
		${LIBFREETYPE_DLL}
		${ZLIB1_DLL}
		${FENIXENGINE_DLL}"
	)

ELSE (WIN32)
	SET(DLL_INSTALLED_LIBS "")
	SET(SYSTEM_LIB_PATHS "/lib" "/usr/lib" "/usr/local/lib")
	INCLUDE_DIRECTORIES("/usr/include" "/usr/local/include" "/usr/include/SDL2" "/usr/local/include/SDL2")
ENDIF(WIN32)

FIND_LIBRARY(FenixEngine NAMES FenixEngine PATHS ${SYSTEM_LIB_PATHS})
FIND_LIBRARY(SDL2_LIBRARY NAMES SDL2 PATHS ${SYSTEM_LIB_PATHS})
FIND_LIBRARY(SDL2_MAIN_LIBRARY  NAMES SDL2main PATHS ${SYSTEM_LIB_PATHS})
FIND_LIBRARY(SDL2_IMAGE_LIBRARY NAMES SDL2_image PATHS ${SYSTEM_LIB_PATHS})
FIND_LIBRARY(SDL2_TTF_LIBRARY NAMES SDL2_ttf PATHS ${SYSTEM_LIB_PATHS})

SET(LIBRARIES 
	${FenixEngine} 
	${SDL2_LIBRARY} 
	${SDL2_IMAGE_LIBRARY} 
	${SDL2_MAIN_LIBRARY}
	${SDL2_TTF_LIBRARY}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})

IF (WIN32)
	INSTALL(FILES "${LIBRARIES}" DESTINATION $<TARGET_FILE_DIR:${PROJECT_NAME}>)
ENDIF(WIN32)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})
INSTALL(FILES ${DLL_INSTALLED_LIBS} DESTINATION ${INSTALL_DIR})
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION ${INSTALL_DIR})
